[CI][RESUME] Igt@* dmesg-fail/dmesg-warn/incomplete - WARN_ON(!power_well->desc->hsw.is_tc_tbt)
@l4kshmi
Submitted by LAKSHMINARAYANA VUDUM Assigned to Intel GFX Bugs mailing list
Link to original bug (#111996)
Description
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7058/re-tgl1-display/igt@perf_pmu@semaphore-busy-bcs0.html
<4>
[463.981511] WARN_ON(!power_well->desc->hsw.is_tc_tbt)
<4>
[463.981635] WARNING: CPU: 5 PID: 195 at drivers/gpu/drm/i915/display/intel_display_power.c:296 hsw_wait_for_power_well_enable.isra.13+0x71/0x80 [i915]
<4>
[463.981640] Modules linked in: i915 mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul cdc_ether usbnet mii ghash_clmulni_intel mei_me mei prime_numbers
<4>
[463.981664] CPU: 5 PID: 195 Comm: kworker/5:2 Tainted: G U W 5.4.0-rc2-CI-CI_DRM_7058+ #1 (moved)
<4>
[463.981670] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2321.A09.1909250234 09/25/2019
<4>
[463.981785] Workqueue: events i915_hotplug_work_func [i915]
<4>
[463.981886] RIP: 0010:hsw_wait_for_power_well_enable.isra.13+0x71/0x80 [i915]
<4>
[463.981894] Code: a0 bf 04 00 00 00 48 8b 10 e8 fb 7f 4d e1 48 8b 03 f6 40 2a 04 75 de 48 c7 c6 90 56 28 a0 48 c7 c7 97 7a 2a a0 e8 af b2 f0 e0 <0f>
0b 5b c3 90 66 2e 0f 1f 84 00 00 00 00 00 41 57 41 56 ba 01 00
<4>
[463.981900] RSP: 0018:ffffc90001767928 EFLAGS: 00010286
<4>
[463.981906] RAX: 0000000000000000 RBX: ffff888494619188 RCX: 0000000000000005
<4>
[463.981912] RDX: 0000000000001711 RSI: ffff88849abe49e8 RDI: ffffffff8213bcf9
<4>
[463.981916] RBP: ffff8884918d0d80 R08: ffff88849abe49e8 R09: 0000000000000000
<4>
[463.981923] R10: 0000000000000000 R11: 0000000000000000 R12: 0000000000000001
<4>
[463.981928] R13: ffff888494619188 R14: ffffffffa024b2c0 R15: ffff8884918d0000
<4>
[463.981933] FS: 0000000000000000(0000) GS:ffff8884a0680000(0000) knlGS:0000000000000000
<4>
[463.981938] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>
[463.981943] CR2: 00007f22647ec900 CR3: 000000049a836005 CR4: 0000000000760ee0
<4>
[463.981948] PKRU: 55555554
<4>
[463.981953] Call Trace:
<4>
[463.982047] icl_combo_phy_aux_power_well_enable+0xea/0x1c0 [i915]
<4>
[463.982065] ? mark_held_locks+0x49/0x70
<4>
[463.982169] intel_power_well_enable+0x35/0x40 [i915]
<4>
[463.982258] __intel_display_power_get_domain.part.27+0x69/0x80 [i915]
<4>
[463.982345] intel_display_power_get+0x46/0x60 [i915]
<4>
[463.982447] intel_dp_aux_xfer+0xd3/0x8e0 [i915]
<4>
[463.982470] ? __mutex_lock+0x396/0x9d0
<4>
[463.982477] ? __lock_acquire+0x460/0x15d0
<4>
[463.982563] intel_dp_aux_transfer+0xa7/0x200 [i915]
<4>
[463.982580] drm_dp_dpcd_access+0x76/0x110
<4>
[463.982597] drm_dp_dpcd_read+0x29/0xc0
<4>
[463.982681] intel_dp_read_dpcd+0x38/0x120 [i915]
<4>
[463.982766] intel_dp_detect+0x28d/0x4f0 [i915]
<4>
[463.982776] ? drm_modeset_lock+0xad/0x120
<4>
[463.982788] drm_helper_probe_detect_ctx+0x67/0xd0
<4>
[463.982883] intel_encoder_hotplug+0x2c/0x90 [i915]
<4>
[463.982970] intel_ddi_hotplug+0x58/0x350 [i915]
<4>
[463.983058] ? i915_hotplug_work_func+0x1c8/0x2f0 [i915]
<4>
[463.983070] ? drm_dbg+0x7f/0x90
<4>
[463.983162] i915_hotplug_work_func+0x1ec/0x2f0 [i915]
<4>
[463.983185] process_one_work+0x26a/0x620
<4>
[463.983205] worker_thread+0x37/0x380
<4>
[463.983216] ? process_one_work+0x620/0x620
<4>
[463.983223] kthread+0x119/0x130
<4>
[463.983231] ? kthread_park+0x80/0x80
<4>
[463.983242] ret_from_fork+0x24/0x50
<4>
[463.983269] irq event stamp: 101608
<4>
[463.983276] hardirqs last enabled at (101607): [<ffffffff8112a7fc>
] vprintk_emit+0xcc/0x340
<4>
[463.983283] hardirqs last disabled at (101608): [<ffffffff81001bba>
] trace_hardirqs_off_thunk+0x1a/0x20
<4>
[463.983289] softirqs last enabled at (101468): [<ffffffff81c00385>
] __do_softirq+0x385/0x47f
<4>
[463.983295] softirqs last disabled at (101453): [<ffffffff810b7eaa>
] irq_exit+0xba/0xc0
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7058/re-tgl1-display/igt@kms_plane_alpha_blend@pipe-a-alpha-opaque-fb.html
<4>
[672.193160] WARN_ON(!power_well->desc->hsw.is_tc_tbt)
<4>
[672.193212] WARNING: CPU: 2 PID: 1352 at drivers/gpu/drm/i915/display/intel_display_power.c:296 hsw_wait_for_power_well_enable.isra.13+0x71/0x80 [i915]
<4>
[672.193214] Modules linked in: mei_hdcp i915 x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul cdc_ether usbnet mii ghash_clmulni_intel mei_me mei prime_numbers
<4>
[672.193224] CPU: 2 PID: 1352 Comm: kms_plane_alpha Tainted: G U W 5.4.0-rc2-CI-CI_DRM_7058+ #1 (moved)
<4>
[672.193226] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2321.A09.1909250234 09/25/2019
<4>
[672.193260] RIP: 0010:hsw_wait_for_power_well_enable.isra.13+0x71/0x80 [i915]
<4>
[672.193263] Code: a0 bf 04 00 00 00 48 8b 10 e8 fb 0f 49 e1 48 8b 03 f6 40 2a 04 75 de 48 c7 c6 90 c6 2c a0 48 c7 c7 97 ea 2e a0 e8 af 42 ec e0 <0f>
0b 5b c3 90 66 2e 0f 1f 84 00 00 00 00 00 41 57 41 56 ba 01 00
<4>
[672.193265] RSP: 0018:ffffc9000108f858 EFLAGS: 00010286
<4>
[672.193267] RAX: 0000000000000000 RBX: ffff888489890ae8 RCX: 0000000000000002
<4>
[672.193268] RDX: 00000000000016da RSI: ffff88849ad54970 RDI: ffffffff8213bcf9
<4>
[672.193269] RBP: ffff888480790d80 R08: ffff88849ad54970 R09: 0000000000000000
<4>
[672.193271] R10: 0000000000000000 R11: 0000000000000000 R12: 0000000000000001
<4>
[672.193272] R13: ffff888489890ae8 R14: ffffffffa02922c0 R15: ffff888480790000
<4>
[672.193274] FS: 00007fbc1a868e40(0000) GS:ffff8884a0500000(0000) knlGS:0000000000000000
<4>
[672.193276] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>
[672.193277] CR2: 00007f02c9cda000 CR3: 0000000486c9e006 CR4: 0000000000760ee0
<4>
[672.193279] PKRU: 55555554
<4>
[672.193280] Call Trace:
<4>
[672.193315] icl_combo_phy_aux_power_well_enable+0xea/0x1c0 [i915]
<4>
[672.193321] ? mark_held_locks+0x49/0x70
<4>
[672.193355] intel_power_well_enable+0x35/0x40 [i915]
<4>
[672.193388] __intel_display_power_get_domain.part.27+0x69/0x80 [i915]
<4>
[672.193419] intel_display_power_get+0x46/0x60 [i915]
<4>
[672.193450] intel_dp_aux_xfer+0xd3/0x8e0 [i915]
<4>
[672.193457] ? __mutex_lock+0x396/0x9d0
<4>
[672.193460] ? __lock_acquire+0x460/0x15d0
<4>
[672.193491] intel_dp_aux_transfer+0xa7/0x200 [i915]
<4>
[672.193497] drm_dp_dpcd_access+0x76/0x110
<4>
[672.193502] drm_dp_dpcd_read+0x29/0xc0
<4>
[672.193531] intel_dp_read_dpcd+0x38/0x120 [i915]
<4>
[672.193559] intel_dp_detect+0x28d/0x4f0 [i915]
<4>
[672.193564] drm_helper_probe_single_connector_modes+0xd5/0x6f0
<4>
[672.193567] ? __mutex_lock+0x396/0x9d0
<4>
[672.193578] drm_mode_getconnector+0x1f9/0x4a0
<4>
[672.193586] ? drm_connector_property_set_ioctl+0x60/0x60
<4>
[672.193589] drm_ioctl_kernel+0xa7/0xf0
<4>
[672.193594] drm_ioctl+0x2e1/0x390
<4>
[672.193597] ? drm_connector_property_set_ioctl+0x60/0x60
<4>
[672.193603] ? __lock_acquire+0x460/0x15d0
<4>
[672.193610] do_vfs_ioctl+0xa0/0x6f0
<4>
[672.193612] ? find_held_lock+0x2d/0x90
<4>
[672.193617] ? __task_pid_nr_ns+0xbc/0x1f0
<4>
[672.193621] ksys_ioctl+0x35/0x60
<4>
[672.193625] __x64_sys_ioctl+0x11/0x20
<4>
[672.193628] do_syscall_64+0x4f/0x210
<4>
[672.193631] entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4>
[672.193633] RIP: 0033:0x7fbc19df95d7
<4>
[672.193635] Code: b3 66 90 48 8b 05 b1 48 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48>
3d 01 f0 ff ff 73 01 c3 48 8b 0d 81 48 2d 00 f7 d8 64 89 01 48
<4>
[672.193636] RSP: 002b:00007ffff7261e68 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4>
[672.193638] RAX: ffffffffffffffda RBX: 0000557b2e18dc28 RCX: 00007fbc19df95d7
<4>
[672.193640] RDX: 00007ffff7261ea0 RSI: 00000000c05064a7 RDI: 0000000000000005
<4>
[672.193641] RBP: 00007ffff7261ea0 R08: 0000557b2e183b80 R09: 0000000000000000
<4>
[672.193643] R10: 0000000000000055 R11: 0000000000000246 R12: 00000000c05064a7
<4>
[672.193644] R13: 0000000000000005 R14: 0000000000000005 R15: 00007ffff7261ea0
<4>
[672.193652] irq event stamp: 51550
<4>
[672.193655] hardirqs last enabled at (51549): [<ffffffff8112a7fc>
] vprintk_emit+0xcc/0x340
<4>
[672.193657] hardirqs last disabled at (51550): [<ffffffff81001bba>
] trace_hardirqs_off_thunk+0x1a/0x20
<4>
[672.193660] softirqs last enabled at (50596): [<ffffffff81c00385>
] __do_softirq+0x385/0x47f
<4>
[672.193663] softirqs last disabled at (50589): [<ffffffff810b7eaa>
] irq_exit+0xba/0xc0